objects/LLC_BI__Loan_Compliance__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Total_Units__c</fullName>
        <description>This is a required field.  This field indicates the number of individual dwelling units related to the property securing the covered loan or, in the case of an application, proposed to secure the covered loan.</description>
        <label>Property Securing Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Zip__c</fullName>
        <description>This is a required field.  This field indicates the ZIP of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>This is a required field. This field indicates the type of entity that purchased the loan.</description>
        <inlineHelpText>If you sell a loan in the same calendar year in which it was originated or purchased, you must identify the type of purchaser. If you don’t sell the loan during the same calendar year or if it didn’t result in a loan origination, enter code “0”.</inlineHelpText>
        <label>Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reverse_Mortgage__c</fullName>
        <description>This is a required field.  This field indicates whether the covered loan is, or the application is for, a reverse mortgage.</description>
        <label>Reverse Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Submission_Of_Application__c</fullName>
        <description>This is a required field.  This field indicates whether the applicant or borrower submitted the application directly to your institution.</description>
        <label>Submission of Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Loan_Costs__c</fullName>
        <description>This is a required field.  This field indicates in dollars, the amount of total loan costs.</description>
        <label>Total Loan Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Points_Fees__c</fullName>
        <description>--DEPRECATED-- Use Total_Points_And_Fees__c - This is a required field.  This field indicates in dollars, the total points and fees charged in connection with the covered loan.</description>
        <inlineHelpText>If the amount is zero, enter 0.</inlineHelpText>
        <label>-D Total Points and Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Universal_Loan_Identifier__c</fullName>
        <description>This is a required field.  This field is the identifier used to identify and retrieve a loan or application that contains the FI&apos;s LEI, an internally generated sequence of characters, and a check digit</description>
        <inlineHelpText>The ULI begins with the financial institution&apos;s Legal Entity Identifier.  Follows the Legal Entity Identifier with up to 23 additional characters to identify the covered loan or application.  Ends with a two-character check digit that is calculated using</inlineHelpText>
        <label>Universal Loan Identifier (ULI)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR_Effective_Date__c</fullName>
        <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the effective date of the APOR Index used to complete HPML compliance calculations for a loan.</inlineHelpText>
        <label>HPML APOR Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR__c</fullName>
        <description>The system automatically populates this percentage field with the Average Prime Offer Rate percentage when compliance calculations are completed for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the APOR for a loan when HPML compliance calculations are completed.</inlineHelpText>
        <label>HPML APOR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_Calculation_Date__c</fullName>
        <description>The system automatically populates this field to display the date Higher-Priced Mortgage Loan compliance calculations are completed. By default, this field is blank.</description>
        <inlineHelpText>This field displays the HPML calculation date.</inlineHelpText>
        <label>HPML Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Closing_Disclosure_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the initial closing disclosure. By default, this field is blank.</description>
        <inlineHelpText>Enter the date for the initial closing disclosure.</inlineHelpText>
        <label>Initial Closing Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Loan_Estimate_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the initial loan estimate. By default, this field is blank.</description>
        <inlineHelpText>Enter the date for the initial loan estimate.</inlineHelpText>
        <label>Initial Loan Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Charge__c</fullName>
        <description>The system automatically populates this field to display the interest paid by a borrower over the life of a loan calculated as a percentage of the Amount Financed. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of interest paid for a loan.</inlineHelpText>
        <label>Interest Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This is a required field. This field indicates as a percentage, to at least three (3) decimal places, the interest rate.</description>
        <inlineHelpText>Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places. Decimal place trailing zeros may be either included or omitted.</inlineHelpText>
        <label>Interest Rate</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Introductory_Rate_Period__c</fullName>
        <description>This is a required field. This field indicates the number of months, or proposed number of months in the case of an application, until the first date the interest rate may change after closing or account opening.</description>
        <label>Introductory Rate Period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that a loan qualifies as a High-Cost Mortgage. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if a loan qualifies as HCM.</inlineHelpText>
        <label>Is HCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HPML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that a loan qualifies as a Higher-Priced Mortgage Loan. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if a loan qualifies as HPML.</inlineHelpText>
        <label>Is HPML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Manually_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this optional checkbox field to indicate that manual edits have been made to the loan compliance record on the Loan Compliance route. By default, it is deselected.</description>
        <inlineHelpText>This field indicates if a user has manually edited the loan compliance record. When selected, the system does not automatically populate fields on the loan compliance record with values entered in the workflow.</inlineHelpText>
        <label>Is Manually Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Id__c</fullName>
        <description>This is a required field.  This field indicates the unique loan or loan application number.</description>
        <formula>CASESAFEID(LLC_BI__Loan__c)</formula>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Term__c</fullName>
        <description>This is a required field. This field indicates the number of months after which the legal obligation will mature or terminate, or would have matured or terminated.</description>
        <label>Loan Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Compliances</relationshipLabel>
        <relationshipName>Loan_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_LO_NMLSR_Id__c</fullName>
        <description>This is a required field.  This field indicates the Nationwide Mortgage Licensing System and Registry mortgage loan originator unique identifier (NMLSR ID) for the mortgage loan originator.</description>
        <label>Mortgage Loan Originator NMLSR Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepayment_Penalty_Term__c</fullName>
        <description>This is a required field.  This field indicates the term, in months, of any prepayment penalty.</description>
        <inlineHelpText>Enter &quot;NA&quot; if the requirement to report prepayment penalty term does not apply to the covered loan or application that your institution is reporting.</inlineHelpText>
        <label>Prepayment Penalty Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Lock_Expiration_Date_and_Time__c</fullName>
        <description>Users populate this optional field to indicate the expiration date and time of the rate lock. By default, this field is blank.</description>
        <inlineHelpText>Enter the date and time the rate lock expires.</inlineHelpText>
        <label>Rate Lock Expiration Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Spread__c</fullName>
        <description>This is a required field.  This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data take the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on Treasury securities of comparable maturity - but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA help interpret the pricing data.</description>
        <inlineHelpText>Enter, as a percentage, to at least three (3) decimal places. Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places.</inlineHelpText>
        <label>Rate Spread (##.### format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosed_Closing_Disclosure_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the redisclosed closing disclosure. By default, this field is blank.</description>
        <inlineHelpText>Enter the date for the redisclosed closing disclosure.</inlineHelpText>
        <label>Redisclosed Closing Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosed_Loan_Estimate_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the redisclosed loan estimate. By default, this field is blank.</description>
        <inlineHelpText>Enter the date for the redisclosed loan estimate.</inlineHelpText>
        <label>Redisclosed Loan Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosure_Reasons__c</fullName>
        <description>The system automatically populates this optional multi-select picklist to indicate the reason the loan may require redisclosure. By default, the picklist value is null.</description>
        <inlineHelpText>This system-populated multi-select picklist indicates the reason the loan may require redisclosure.</inlineHelpText>
        <label>Redisclosure Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Lock</fullName>
                </value>
                <value>
                    <fullName>Tolerance Violation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TRID_Tolerances_Exceeded_Date__c</fullName>
        <description>The system automatically populates this optional date field to indicate the date the fees associated with the loan exceeded TRID tolerances. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field displays the date the fees exceeded TRID tolerances.</inlineHelpText>
        <label>TRID Tolerances Exceeded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Points_And_Fees__c</fullName>
        <description>The system automatically populates this field to indicate the total points and fees for a loan. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total points and fees for a loan.</inlineHelpText>
        <label>Total Points and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Compliance</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LCO-{000000}</displayFormat>
        <label>Loan Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Compliances</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2017</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2017</description>
        <label>HMDA-Effective-2017</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2018</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2018</description>
        <label>HMDA-Effective-2018</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__LE_CD_Date_Required</fullName>
        <active>true</active>
        <description>User must populate loan estimate or closing disclosure date.</description>
        <errorConditionFormula>OR( AND( NOT( ISBLANK( LLC_BI__Redisclosed_Closing_Disclosure_Date__c ) ), ISBLANK( LLC_BI__Initial_Closing_Disclosure_Date__c ) ), AND( OR( NOT( ISBLANK(LLC_BI__Initial_Closing_Disclosure_Date__c ) ), NOT( ISBLANK(LLC_BI__Redisclosed_Loan_Estimate_Date__c ) ), NOT( ISBLANK( LLC_BI__Redisclosed_Closing_Disclosure_Date__c ) ) ), ISBLANK( LLC_BI__Initial_Loan_Estimate_Date__c ) ) )</errorConditionFormula>
        <errorMessage>One or more required date fields are empty. Enter the initial loan estimate date or the initial closing disclosure date to continue.</errorMessage>
    </validationRules>
</CustomObject>